# ChangeLog for dev-lang/erlang
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/erlang/ChangeLog,v 1.89 2008/01/11 11:57:44 opfer Exp $

  11 Jan 2008; Christian Faulhammer <opfer@gentoo.org> erlang-12.2.0.ebuild:
  filter --as-needed from LDFLAGS, reported by Santiago Gala <sgala AT apache
  DOT org> in bug 203157

  09 Jan 2008; Christian Faulhammer <opfer@gentoo.org> erlang-12.2.0.ebuild:
  comment on patch which has been accepted upstream

  04 Jan 2008; Christian Faulhammer <opfer@gentoo.org>
  -erlang-11.2.5.ebuild:
  clean up

  21 Dec 2007; nixnut <nixnut@gentoo.org> erlang-11.2.5-r3.ebuild:
  Stable on ppc wrt bug 202552

  18 Dec 2007; Christian Faulhammer <opfer@gentoo.org>
  erlang-11.2.5-r3.ebuild, erlang-12.2.0.ebuild:
  comment on patches and stable amd64, bug 202552

  17 Dec 2007; Ferris McCormick <fmccor@gentoo.org> erlang-11.2.5-r3.ebuild:
  Sparc stable, Bug #202552.

  17 Dec 2007; Christian Faulhammer <opfer@gentoo.org>
  erlang-11.2.5-r3.ebuild:
  stable x86, bug 202552

  17 Dec 2007; Christian Faulhammer <opfer@gentoo.org> erlang-12.2.0.ebuild:
  comment on patches sent to upstream

*erlang-12.2.0 (10 Dec 2007)

  10 Dec 2007; Christian Faulhammer <opfer@gentoo.org>
  +files/erlang-12.2.0-binary-append.patch, +erlang-12.2.0.ebuild:
  version bump, fixes bug 201598

  10 Dec 2007; Christian Faulhammer <opfer@gentoo.org>
  -erlang-11.2.5-r2.ebuild:
  clean up

  21 Nov 2007; Christian Faulhammer <opfer@gentoo.org>
  erlang-11.2.5-r3.ebuild:
  amd64 not x86 needs the patch

*erlang-11.2.5-r3 (21 Nov 2007)

  21 Nov 2007; Christian Faulhammer <opfer@gentoo.org>
  +files/erlang-11.2.5-odbc-support-amd64.patch, -erlang-11.2.4-r1.ebuild,
  -erlang-11.2.5-r1.ebuild, +erlang-11.2.5-r3.ebuild:
  clean up; add patch to enable ODBC support on amd64, thanks to Alexander T
  <spam AT ndl DOT kiev DOT ua> in bug 198302

  23 Sep 2007; Christian Faulhammer <opfer@gentoo.org>