@@ -12,6 +12,6 @@ DIST otp_doc_man_R12B-0.tar.gz 757429 RMD160 a7b58d95c2804866e3a1f5984f7a0ee914b
 DIST otp_src_R11B-5.tar.gz 38332865 RMD160 67eac12a891df0e8d46b383ea0997f9de3aa6ac6 SHA1 c03569f0387b04b0afcc5f59983792676fd4382b SHA256 d41fdfba40f86a50e04b7226ae5cc4581072fad26d14be5e1ca06603813bb175
 DIST otp_src_R12B-0.tar.gz 41074760 RMD160 cb07ea37f2b56e1ea2fc07c9063b647df7635b2b SHA1 e2c6e18d22e34a799fc6bc25fa2d25eedb30bccc SHA256 8415e7a4ab0e0f70df8d5e2f19e742ef8f6c0d1bdf91aa62968332cf3d92be57
 EBUILD erlang-11.2.5-r3.ebuild 5259 RMD160 bbaf59f97de1b7f4c14074c7bc261c732a33422e SHA1 a90ba3ad2788b225a50fff2b5c0680b2bcd311e2 SHA256 c7b07647a7e728dbce4314f46a7f81b8db9d41f561af008a6a12f309b892870a
-EBUILD erlang-12.2.0.ebuild 5440 RMD160 0db425913d9f31b1fcf9b8edb16c5ba5422fc7f7 SHA1 edf72f10468f5e4ff914fa613173cf7e96aac8d8 SHA256 8b999e0af6f0d0d1b44749a0e48a2e5e10d45383b1af7de9cd429d8f0c3d1b21
-MISC ChangeLog 16141 RMD160 d91b7a347821c19477d73090ef1925feb838d0b9 SHA1 da9bd1097ff78d56d65744d334a4030a5457d403 SHA256 11715af378838e0d268fd5f40d2b04904ea338b2c2416f33508e833ab8f70f85
+EBUILD erlang-12.2.0.ebuild 5397 RMD160 b6923d3d727283e0ed0c622899bc1981b7004eb7 SHA1 e186dd051dd9814891b630c9c82ccbcc02cfac42 SHA256 0f9a426491fd518c46fb4fede080fc426a1926fa6a6f830b7dcc396b545983cc
+MISC ChangeLog 16254 RMD160 6d79342b293c3f396834add6ebe464c16589c0f7 SHA1 06544b524b932ac9c01c26e20ade98c334ddc989 SHA256 8121201829e529e2bc579092553cf599649cfb5d42f00832664443256e99f6e7
 MISC metadata.xml 402 RMD160 3d4e0e7953d95f43de89f62eacb37969caa29336 SHA1 2a45564353e8d0c2b9555294a6a269e56e0b6056 SHA256 c713a207afd5d65ef21d1c1e5fd3b867ce063dd9e46fc53db0734ad19f59ffe7
